infra/Webapp/loadbalancer/lb.tf
resource "aws_lb" "lb" {
  name               = var.app_name
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb.id]
  subnets            = var.lb_subnets
}
